jlamontSC-test/src/objects/Email_Summary_Statistic_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Email_Summary_Statistics_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Name__c</fullName>
        <label>Email Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Summary_Statistic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Summary Statistic</label>
        <referenceTo>Email_Summary_Statistic__c</referenceTo>
        <relationshipName>Email_Summary_Statistics_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <label>Emails Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bounces__c</fullName>
        <label>Total Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Clicks__c</fullName>
        <label>Total Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forwards__c</fullName>
        <label>Total Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opens__c</fullName>
        <label>Total Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Clicks__c</fullName>
        <label>Unique Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Forwards__c</fullName>
        <label>Unique Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Opens__c</fullName>
        <label>Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Email Summary Statistic Snapshot</label>
    <nameField>
        <displayFormat>ESS-Snapshot-{0}</displayFormat>
        <label>ESS Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Summary Statistic Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>